--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ProjectInvasion/vendor/glfw"]
 	path = ProjectInvasion/vendor/glfw
 	url = https://github.com/TheCherno/glfw.git
+[submodule "ProjectInvasion/vendor/imgui"]
+	path = ProjectInvasion/vendor/imgui
+	url = https://github.com/rifkikesepara/imgui.git
