--- a/ProjectInvasion/ProjectInvasion.vcxproj.filters
+++ b/ProjectInvasion/ProjectInvasion.vcxproj.filters
@@ -10,16 +10,24 @@
     <ClInclude Include="src\Layer\Layer.h">
       <Filter>Layer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Layer\LayerStack.h">
+      <Filter>Layer</Filter>
+    </ClInclude>
     <ClInclude Include="src\pch.h" />
-    <ClInclude Include="src\Layer\LayerStack.h" />
+    <ClInclude Include="src\Imgui.hpp" />
+    <ClInclude Include="src\Layer\ImGUILayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Layer\Layer.cpp">
       <Filter>Layer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Layer\LayerStack.cpp">
+      <Filter>Layer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\pch.cpp" />
-    <ClCompile Include="src\Layer\LayerStack.cpp" />
+    <ClCompile Include="src\Imgui.cpp" />
+    <ClCompile Include="src\Layer\ImGUILayer.cpp" />
   </ItemGroup>
 </Project>
