Fixed layers, added event system

--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -4,18 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=385,138
-ViewportId=0xE927CF2F
-Size=800,581
+Pos=339,68
+Size=523,546
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=800,600
+Size=1200,720
 Collapsed=0
 
 [Window][Example: Console]
-ViewportPos=172,195
-ViewportId=0x46B5E99C
+Pos=99,93
 Size=520,600
 Collapsed=0
 
@@ -31,9 +29,8 @@ Size=800,581
 Collapsed=0
 
 [Window][Example: Custom rendering]
-ViewportPos=261,245
-ViewportId=0x3AC84485
-Size=485,414
+Pos=629,63
+Size=485,413
 Collapsed=0
 
 [Window][Delete?]
