--- a/ProjectInvasion/ProjectInvasion.vcxproj.filters
+++ b/ProjectInvasion/ProjectInvasion.vcxproj.filters
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Events">
+      <UniqueIdentifier>{3A8963B1-262B-8E87-0FE6-A1DBFB2615D8}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Layer">
       <UniqueIdentifier>{6287950D-CE9B-BDBE-971D-611E03F1B9EF}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\Events\ApplicationEvent.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Events\Event.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Events\KeyEvent.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Events\MouseEvent.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Layer\ImGUILayer.h">
+      <Filter>Layer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Layer\Layer.h">
       <Filter>Layer</Filter>
     </ClInclude>
@@ -14,11 +32,14 @@
       <Filter>Layer</Filter>
     </ClInclude>
     <ClInclude Include="src\pch.h" />
-    <ClInclude Include="src\Imgui.hpp" />
-    <ClInclude Include="src\Layer\ImGUILayer.h" />
+    <ClInclude Include="src\Window.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Layer\ImGUILayer.cpp">
+      <Filter>Layer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Layer\Layer.cpp">
       <Filter>Layer</Filter>
     </ClCompile>
@@ -27,7 +48,6 @@
     </ClCompile>
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\pch.cpp" />
-    <ClCompile Include="src\Imgui.cpp" />
-    <ClCompile Include="src\Layer\ImGUILayer.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
   </ItemGroup>
 </Project>
