--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ProjectInvasion/vendor/imgui"]
 	path = ProjectInvasion/vendor/imgui
 	url = https://github.com/rifkikesepara/imgui.git
+[submodule "ProjectInvasion/vendor/glm"]
+	path = ProjectInvasion/vendor/glm
+	url = https://github.com/g-truc/glm.git
