--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -1,10 +1,11 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=390,182
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=205,37
+ViewportPos=1284,194
+ViewportId=0xE927CF2F
 Size=711,597
 Collapsed=0
 
