--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -1,42 +1,25 @@
 [Window][Debug##Default]
-Pos=340,18
+Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=48,17
-Size=368,345
+Pos=26,25
+Size=238,190
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Debug]
+Pos=60,60
+Size=218,140
 Collapsed=0
 
-[Window][DockSpace Demo]
-Size=1200,720
+[Window][Debug window]
+Pos=26,25
+Size=238,190
 Collapsed=0
-
-[Window][Example: Console]
-Pos=100,90
-Size=520,600
-Collapsed=0
-
-[Window][Example: Simple layout]
-Pos=2,66
-Size=500,440
-Collapsed=0
-
-[Window][Example: Documents]
-ViewportPos=384,131
-ViewportId=0xA4D966FE
-Size=800,581
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=629,63
-Size=485,413
-Collapsed=0
-
-[Window][Delete?]
-Pos=244,241
-Size=311,118
-Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=195,223 Size=238,190 Selected=0x336CAE76
 
