updated Renderer and Shaders

--- a/ProjectInvasion/ProjectInvasion.vcxproj.filters
+++ b/ProjectInvasion/ProjectInvasion.vcxproj.filters
@@ -94,6 +94,11 @@
       <Filter>vendor\stb</Filter>
     </ClInclude>
     <ClInclude Include="src\Layer\DebugLayer.h" />
+    <ClInclude Include="src\Log.h" />
+    <ClInclude Include="src\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Utils\PlatformUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -144,5 +149,9 @@
     <ClCompile Include="vendor\stb\stb_image.cpp">
       <Filter>vendor\stb</Filter>
     </ClCompile>
+    <ClCompile Include="src\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Utils\PlatformUtils.cpp" />
   </ItemGroup>
 </Project>
