--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -4,22 +4,134 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=26,25
-Size=238,190
-Collapsed=0
-DockId=0x00000001,1
+Pos=744,56
+Size=232,59
+Collapsed=1
 
 [Window][Debug]
-Pos=60,60
-Size=218,140
+Pos=0,19
+Size=1200,55
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Debug window]
-Pos=26,25
-Size=238,190
+Pos=46,55
+Size=280,259
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1200,720
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,290
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=237,124
+Size=354,104
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=165,194
+ViewportId=0x6D551092
+Size=339,902
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=393,75
+Size=570,109
+Collapsed=0
+
+[Window][Example: Documents]
+ViewportPos=297,290
+ViewportId=0x1FD64BEB
+Size=607,577
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=790,399
+Size=409,172
+Collapsed=0
+
+[Window][Delete?]
+Pos=804,441
+Size=311,118
+Collapsed=0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=195,223 Size=238,190 Selected=0x336CAE76
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=169,217 Size=1200,701 Split=Y
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=836,55 HiddenTabBar=1 Selected=0x392A5ADD
+  DockNode  ID=0x00000005 Parent=0x3BC79352 SizeRef=836,644 CentralNode=1
 
