added the feature line rendering to the Renderer Class

--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -4,13 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=744,56
-Size=232,59
-Collapsed=1
+Pos=0,19
+Size=1200,18
+Collapsed=0
+DockId=0x00000001,0
 
 [Window][Debug]
-Pos=0,19
-Size=1200,55
+Pos=0,39
+Size=1200,59
 Collapsed=0
 DockId=0x00000002,0
 
@@ -131,7 +132,9 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=169,217 Size=1200,701 Split=Y
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=836,55 HiddenTabBar=1 Selected=0x392A5ADD
-  DockNode  ID=0x00000005 Parent=0x3BC79352 SizeRef=836,644 CentralNode=1
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=73,121 Size=1200,701 Split=Y
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1200,18 HiddenTabBar=1 Selected=0xE87781F4
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1200,681 Split=Y
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=836,59 HiddenTabBar=1 Selected=0x392A5ADD
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=836,620 CentralNode=1
 
