--- a/ProjectInvasion/ProjectInvasion.vcxproj.filters
+++ b/ProjectInvasion/ProjectInvasion.vcxproj.filters
@@ -99,6 +99,12 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Utils\PlatformUtils.h" />
+    <ClInclude Include="src\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Renderer\OrthographicCameraController.h" />
+    <ClInclude Include="src\Timestep.h" />
+    <ClInclude Include="src\Input.h" />
+    <ClInclude Include="src\KeyCode.h" />
+    <ClInclude Include="src\MouseCode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -153,5 +159,8 @@
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Utils\PlatformUtils.cpp" />
+    <ClCompile Include="src\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Renderer\OrthographicCameraController.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
   </ItemGroup>
 </Project>
