--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -4,26 +4,25 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=1200,18
+Pos=77,51
+Size=258,109
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000001,1
 
 [Window][Debug]
-Pos=0,39
-Size=1200,59
+Pos=77,51
+Size=258,109
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Debug window]
 Pos=46,55
 Size=280,259
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x3BC79352,0
 
 [Window][DockSpace Demo]
-Pos=0,0
-Size=1200,720
+Size=1920,976
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
@@ -61,6 +60,11 @@ Collapsed=0
 [Window][Delete?]
 Pos=804,441
 Size=311,118
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -132,9 +136,6 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=73,121 Size=1200,701 Split=Y
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1200,18 HiddenTabBar=1 Selected=0xE87781F4
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1200,681 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=836,59 HiddenTabBar=1 Selected=0x392A5ADD
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=836,620 CentralNode=1
+DockNode  ID=0x00000001 Pos=150,178 Size=258,109 Selected=0x392A5ADD
+DockSpace ID=0x3BC79352 Pos=0,73 Size=1920,957 CentralNode=1 HiddenTabBar=1
 
