--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "Core/vendor/glfw"]
-	path = Core/vendor/glfw
+[submodule "Core/vendor/GLFW"]
+	path = Core/vendor/GLFW
 	url = https://github.com/TheCherno/glfw.git
 [submodule "Core/vendor/imgui"]
 	path = Core/vendor/imgui
