--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -141,6 +141,7 @@
     <ClInclude Include="vendor\stb\stb_image.h">
       <Filter>vendor\stb</Filter>
     </ClInclude>
+    <ClInclude Include="src\Math\Mathematics.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -209,5 +210,6 @@
     <ClCompile Include="vendor\stb\stb_image.cpp">
       <Filter>vendor\stb</Filter>
     </ClCompile>
+    <ClCompile Include="src\Math\Mathematics.cpp" />
   </ItemGroup>
 </Project>
