--- a/ProjectInvasion/ProjectInvasion.vcxproj
+++ b/ProjectInvasion/ProjectInvasion.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="src\DebugLayer.h" />
     <ClInclude Include="src\GameLayer.h" />
+    <ClInclude Include="src\ShadowTestLayer.h" />
     <ClInclude Include="src\TestLayer.h" />
   </ItemGroup>
   <ItemGroup>
