--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -4,14 +4,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=22,14
-Size=326,236
+Pos=19,22
+Size=229,232
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=809,79
-Size=331,193
+ViewportPos=636,421
+ViewportId=0xE927CF2F
+Size=755,520
 Collapsed=0
 
+[Window][Stacked 1]
+Pos=1261,531
+Size=409,172
+Collapsed=0
+
+[Window][Delete?]
+Pos=1310,558
+Size=311,118
+Collapsed=0
+
+[Window][ ]
+Pos=18,47
+Size=385,274
+Collapsed=0
+DockId=0x00000001,1
+
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=252,284 Size=229,232 Selected=0x392A5ADD
 
